--- a/skip/getting-started-python/optional-kubernetes-engine/bookshelf/templates/list.html
+++ b/skip/getting-started-python/optional-kubernetes-engine/bookshelf/templates/list.html
@@ -26,6 +26,7 @@
 
 {% for book in books %}
 <div class="media">
+<!--
   <a href="/books/{{book.id}}">
     <div class="media-left">
       {% if book.imageUrl %}
@@ -34,9 +35,10 @@
         <img src="http://placekitten.com/g/128/192">
       {% endif %}
     </div>
+    -->
     <div class="media-body">
-      <h4>{{book.title}}</h4>
-      <p>{{book.author}}</p>
+      <h4>{{book.fname}}</h4>
+      <p>{{book.lname}}</p>
     </div>
   </a>
 </div>
