--- a/skip/getting-started-python/optional-kubernetes-engine/bookshelf/templates/list.html
+++ b/skip/getting-started-python/optional-kubernetes-engine/bookshelf/templates/list.html
@@ -28,15 +28,17 @@
 <div class="media">
 
   <a href="/books/{{book.id}}">
-    <div class="media-left">
+<!--
+      <div class="media-left">
       {% if book.imageUrl %}
         <img src="{{book.imageUrl}}">
       {% else %}
         <img src="http://placekitten.com/g/128/192">
       {% endif %}
     </div>
-   
+-->
     <div class="media-body">
+      <h4>Hello</h4>
       <h4>{{ book.fname }}</h4>
       <p>{{ book.lname }}</p>
     </div>
