Waiter page style added and skipper number blue box

--- a/skip/front-end/Skip/src/pages/skipper/skipper.scss
+++ b/skip/front-end/Skip/src/pages/skipper/skipper.scss
@@ -18,6 +18,10 @@ page-skipper {
     margin-right: 20%; /* change margins when in app */
   }
 
+  .num-waiters {
+     font-size: 1.1em;
+ }
+
   .restaurantDiv {
     width: 100%;
     height: 80%;
