--- a/skip/getting-started-python/optional-kubernetes-engine/bookshelf/templates/form.html
+++ b/skip/getting-started-python/optional-kubernetes-engine/bookshelf/templates/form.html
@@ -17,7 +17,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h3>{{action}} book</h3>
+<h3>{{action}} waiter</h3>
 
 <form method="POST" enctype="multipart/form-data">
 
